# spectra

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  Plan.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_finding_schema_additions.py  003_scan_check_run_id.py  004_auto_fix_fields.py  005_analytics_indexes.py
docs/: MUST_HAVE.md  PRODUCT_ROADMAP.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: ManualScanModal.tsx  ScanProgress.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  auth.tsx  useSSE.ts  utils.ts
frontend/src/types/: index.ts
src/: config.py  dependencies.py  main.py  worker.py
src/api/: analytics.py  auth.py  events.py  findings.py  policies.py  repos.py  router.py  scans.py  webhooks.py
src/core/: error_handlers.py  exceptions.py  logging.py  middleware.py  security.py
src/db/: base.py  engine.py
src/db/models/: __init__.py  finding.py  finding_event.py  organization.py  policy.py  repo.py  scan.py  user.py
src/schemas/: analytics.py  common.py  finding.py  policy.py  repo.py  scan.py  user.py  webhook.py
src/services/: auth.py  auto_fix.py  github.py  notification.py  policy_engine.py  scan_events.py  scan_orchestrator.py
src/storage/: s3.py
src/tasks/: ai_triage.py  auto_fix_task.py  normalizer.py  scan_task.py
src/tasks/tools/: base.py  cyclonedx.py  osv_scanner.py  semgrep.py  (+1 more)
tests/: conftest.py  factories.py  test_auth.py  test_normalizer.py  test_policy_engine.py
(+21 files in other folders)
